syntax = "proto3";
package proto;

option go_package = "github.com/alex-necsoiu/event-driven/api/proto/gen;gen";

// Order service definition
service OrderService {
  // Creates a new order
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
  // Gets an order by ID
  rpc GetOrder (GetOrderRequest) returns (OrderResponse);
}

// Order message
message Order {
  string id = 1;
  string user_id = 2;
  double amount = 3;
  // Add more fields as needed
}

message CreateOrderRequest {
  string user_id = 1;
  double amount = 2;
}

message GetOrderRequest {
  string id = 1;
}

message OrderResponse {
  Order order = 1;
  string error = 2;
} 