syntax = "proto3";
package proto;

option go_package = "github.com/alex-necsoiu/event-driven/api/proto/gen;gen";

// User service definition
service UserService {
  // Creates a new user
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  // Gets a user by ID
  rpc GetUser (GetUserRequest) returns (UserResponse);
}

// User message
message User {
  string id = 1;
  string name = 2;
  string email = 3;
  // Add more fields as needed
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message GetUserRequest {
  string id = 1;
}

message UserResponse {
  User user = 1;
  string error = 2;
} 